Added link to MS Azure tutorial for creating virtual network peer.

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
@@ -28,6 +28,8 @@ When you setup new clients which should be managed, take care that you put them 
 [NOTE]
 ====
 If you want to manage systems in an already existing network, you must configure **peering**.
+
+For more information, see link:https://learn.microsoft.com/en-us/azure/virtual-network/tutorial-connect-virtual-networks?tabs=portal#create-virtual-network-peer[Azure tutorial].
 ====
 
 
