--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -17,7 +17,7 @@ It is also possible to use the Salt Bundle on systems that run a {salt} Minion c
 The registration method with the Salt Bundle is the recommended registration method.
 This section explains the advantages and limitations of the current implementation.
 
-The Salt Bundle is provided as the [package]``venv-salt-minion`` that consists of {salt}, Python 3, and the Python modules {salt} depends on.
+The Salt Bundle is provided as the [package]``venv-salt-minion`` package that consists of {salt}, Python 3, and the Python modules {salt} depends on.
 
 Bootstrapping with {webui} is using Salt Bundle as well, so bootstrapping with {webui} is not Python dependant.
 Using the Salt Bundle, it is no longer needed that the client provides any Python interpreter or modules.
