fix misunderstands about proxy
(per feedback)

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -128,13 +128,16 @@ spacewalk-service start
 
 === On the Proxy
 
-If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their hostnames and cnames.
-You should use [command]``mgr-ssl-cert-setup`` also on a {productname} Proxy to replace the certificates.
-Because the {productname} Proxy does not have a postgreSQL database, just the dedicated proxy restrart command is sufficient:
+
+If you are using a proxy, you need to generate a server certificate for the proxy on the {productname} server and copy the files to the proxy.
+Alternatively, you let your own Certificate Authority generate these files and provide them on the proxy.
+After the files are availableon the proxy, use [command]``mgr-ssl-cert-setup`` also on a {productname} Proxy to replace the certificates.
+Because the {productname} Proxy does not have a postgreSQL database, the dedicated proxy restart command is sufficient:
 
 ----
 spacewalk-proxy restart
 ----
+
 
 
 === Deploy the Root CA on Salt Clients
