proposal to use Ricardo's diagrams https://bugzilla.suse.com/show_bug.cgi?id=1217338 https://github.com/SUSE/spacewalk/issues/25077

--- a/modules/installation-and-upgrade/pages/ports.adoc
+++ b/modules/installation-and-upgrade/pages/ports.adoc
@@ -8,6 +8,18 @@ Some ports only need to be opened if you are using the service that requires the
 
 
 
+== Overview
+
+=== Server
+
+image::ports_diagram.png[]
+
+=== Proxy
+
+image::ports_proxy_diagram.png[]
+
+
+
 == External Inbound Server Ports
 
 External inbound ports must be opened to configure a firewall on the {productname} Server to protect the server from unauthorized access.
