Removed spacewalk-koan from the list of required packages (#3571)
* Removed spacewalk-koan from the list of required packages
https://github.com/SUSE/spacewalk/issues/26118
https://github.com/uyuni-project/uyuni/issues/8905
* differentiate between plain salt and salt bundle

--- a/modules/administration/pages/troubleshooting/tshoot-autoinstallation.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-autoinstallation.adoc
@@ -1,17 +1,12 @@
 [[troubleshooting-autoinstallation]]
 = Troubleshooting Autoinstallation
 
-Depending on your base channel, new autoinstallation profiles might be subscribed to a channel that is missing required packages.
+If you use the plain {salt} (salt-minion) implementation for communication, you on your own must make sure that all the needed software (software packages) is properly available in configured client channels.
+It is not recommended to use this implementation together with {productname}.
 
-For autoinstallation to work, these packages are required:
+With the default {salt} bundle (venv-salt-minion) implementation you only need a client tools channel as a child channel that is compatible with your client base channel.
+All required packages will be part of the {salt} bundle.
 
-* [package]``pyOpenSSL``
-* [package]``rhnlib``
-* [package]``libxml2-python``
-* [package]``spacewalk-koan``
-
-To resolve this issue, check these things first:
-
-* Check that the tools software channel related to the base channel in your autoinstallation profile is available to your organization and your user.
+* Check that the client tools software channel related to the base channel in your autoinstallation profile is available to your organization and your user.
 * Check that the tools channel is available to your {productname} as a child channel.
-* Check that the required packages and any dependencies are available in the associated channels.:
+* Only if using the plain {salt} (salt-minion) implementation, also check that the required packages and any dependencies are available in the associated channels.
