run `zypper ref` plus cosmetic fixes

--- a/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
@@ -2,13 +2,17 @@
 
 Before running the upgrade command, it is recommended to upgrade the [literal]``mgradm`` tool first.
 
-.Procedure
-. One can do so by running the following command:
+.Procedure: Upgrading Server
+. Refresh software repository with [command]``zypper``:
++
+----
+zypper ref
+----
+. Apply available updates with [command]``transactional-update``:
 +
 ----
 transactional-update
 ----
-
 . If updates were applied, [literal]``reboot``.
 
 . The {productname} Server container can be updated using the following command:
@@ -17,8 +21,11 @@ transactional-update
 ----
 mgradm upgrade podman
 ----
++
 
 This command will bring the status of the container up-to-date and restart the server.
+
+
 
 .Upgrading to specific version
 [NOTE]
