--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -1,7 +1,7 @@
 [[client-upgrades-spmigration]]
 = Product Migration
 
-== Introcustion
+== Introduction
 Product migration allows you to upgrade SLE-based client systems from an Service Pack (SP) level to a later one.
 For example, you can migrate {sles}{nbsp}15{nbsp}SP1 to {sles}{nbsp}15{nbsp}SP2.
 You can also upgrade clients such as {almalinux}, {centos}, {oracle}, or {rocky} to {sll}.
