remove ports.adoc and fix reference accordingly pt.2

--- a/modules/administration/pages/troubleshooting/tshoot-inactiveclients.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-inactiveclients.adoc
@@ -36,6 +36,6 @@ Clients can become inactive for a number of reasons:
 
 For more information about client connections to the server, see xref:client-configuration:contact-methods-intro.adoc[].
 
-For more information about configuring ports, see xref:installation-and-upgrade:ports.adoc[].
+For more information about configuring ports, see xref:installation-and-upgrade:network-requirements.adoc#ports[].
 
 For more information about troubleshooting firewalls, see xref:administration:troubleshooting/tshoot-firewalls.adoc[].
