--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -33,7 +33,7 @@ If you are on an internal network and do not have access to {scclongform}, you c
 
 
 In a production environment, the {productname} Server and clients should always use a firewall.
-For a comprehensive list of the required ports, see xref:installation-and-upgrade:network-requirements.adoc#ports.adoc[].
+For a comprehensive list of the required ports, see xref:installation-and-upgrade:network-requirements.adoc#ports[].
 
 
 //For more information on disconnected setup and port configuration, see xref:administration:disconnected-setup.adoc[].
