edits for clarity

--- a/modules/administration/pages/auth-methods-pam.adoc
+++ b/modules/administration/pages/auth-methods-pam.adoc
@@ -34,6 +34,11 @@ mgrctl term
 ----
 +
 .. Set [literal]``krb5_keytab`` in ``domain/$domain`` to [literal]``/etc/sssd/krb5.keytab``
+.. Exit the container:
++
+----
+exit
+----
 . Restart {productname} using:
 +
 ----
@@ -61,7 +66,7 @@ For more information, see {sles-base-os-documentation}/part-auth.html.
 
 For LDAP integration with Active Directory, you can use the following example.
 
-In te code snippet, change the following placeholders according to your environment:
+In the code snippet, change the following placeholders according to your environment:
 
 [literal]``$domain``::
 Your domain name
@@ -71,9 +76,10 @@ FQDN of the AD server if it is not auto-detected from the [literal]``$domain``
 The name of the machine this AD client is supposed to be known.
 If not set, it will be [literal]``uyuni-server.mgr.internal``.
 
-----
-/etc/sssd/sssd.conf:
 
+Example snippet for [path]``/etc/sssd/sssd.conf``:
+
+----
 [sssd]
 config_file_version = 2
 services = nss, pam
