--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -33,13 +33,13 @@ If you are on an internal network and do not have access to {scclongform}, you c
 
 
 In a production environment, the {productname} Server and clients should always use a firewall.
-For a comprehensive list of the required ports, see xref:installation-and-upgrade:ports.adoc[].
+For a comprehensive list of the required ports, see xref:installation-and-upgrade:network-requirements.adoc#ports[].
 
 
 //For more information on disconnected setup and port configuration, see xref:administration:disconnected-setup.adoc[].
 
 [[ports]]
-== Ports
+== Required Network Ports
 
 This section contains a comprehensive list of ports that are used for various communications within {productname}.
 
@@ -58,17 +58,22 @@ Opening these ports allows external network traffic to access the {productname} 
 [cols="1,1,1,3", options="header"]
 .External Port Requirements for {productname} Server
 |===
-| Port number | Protocol | Used By | Notes
-| 22          |          |         | Required for ssh-push and ssh-push-tunnel contact methods.
-| 67          | TCP/UDP  | DHCP    | Required only if clients are requesting IP addresses from the server.
-| 69          | TCP/UDP  | TFTP    | Required if server is used as a PXE server for automated client installation.
-| 80          | TCP      | HTTP    | Required temporarily for some bootstrap repositories and automated installations.
-| 443         | TCP      | HTTPS   | Serves the {webui}, client, and server and proxy (``tftpsync``) requests.
-| 4505        | TCP      | salt    | Required to accept communication requests from clients.
+| Port number | Protocol | Used By    | Notes
+| 22          |          |            | Required for ssh-push and ssh-push-tunnel contact methods.
+| 67          | TCP/UDP  | DHCP       | Required only if clients are requesting IP addresses from the server.
+| 69          | TCP/UDP  | TFTP       | Required if server is used as a PXE server for automated client installation.
+| 80          | TCP      | HTTP       | Required temporarily for some bootstrap repositories and automated installations.
+| 443         | TCP      | HTTPS      | Serves the {webui}, client, and server and proxy (``tftpsync``) requests.
+| 4505        | TCP      | salt       | Required to accept communication requests from clients.
 The client initiates the connection, and it stays open to receive commands from the Salt master.
-| 4506        | TCP      | salt    | Required to accept communication requests from clients.
+| 4506        | TCP      | salt       | Required to accept communication requests from clients.
 The client initiates the connection, and it stays open to report results back to the Salt master.
-| 25151       | TCP      | Cobbler |
+| 5556        | TCP      | Prometheus | Required for scraping Taskomatic JMX metrics.
+| 5557        | TCP      | Prometheus | Required for scraping Tomcat JMX metrics.
+| 9100        | TCP      | Prometheus | Required for scraping Node exporter metrics.
+| 9187        | TCP      | Prometheus | Required for scraping PostgreSQL metrics.
+| 9800        | TCP      | Prometheus | Required for scraping Taskomatic metrics.
+| 25151       | TCP      | Cobbler    |
 |===
 
 
@@ -93,7 +98,7 @@ Port 80 is not used to serve the {webui}.
 
 === Internal Server Ports
 
-Internal port are used internally by the {productname} Server.
+Internal ports are used internally by the {productname} Server.
 Internal ports are only accessible from [literal]``localhost``.
 
 In most cases, you will not need to adjust these ports.
@@ -108,6 +113,7 @@ In most cases, you will not need to adjust these ports.
 | 8009        | Tomcat to Apache HTTPD (AJP).
 | 8080        | Tomcat to Apache HTTPD (HTTP).
 | 9080        | Salt-API, used by the RHN application in Tomcat and Taskomatic.
+| 25151       | Cobbler's XMLRPC API
 | 32000       | Port for a TCP connection to the Java Virtual Machine (JVM) that runs Taskomatic and satellite-search.
 |===
 
@@ -175,6 +181,7 @@ In most cases, you will not need to adjust these ports.
 | Port number | Direction | Protocol | Notes
 | 22          | Inbound   | SSH      | Required for ssh-push and ssh-push-tunnel contact methods.
 | 80          | Outbound  |          | Used to reach the server or proxy.
+| 443         | Outbound  |          | Used to reach the server or proxy.
 | 9090        | Outbound  | TCP      | Required for Prometheus user interface.
 | 9093        | Outbound  | TCP      | Required for Prometheus alert manager.
 | 9100        | Outbound  | TCP      | Required for Prometheus node exporter.
@@ -189,10 +196,10 @@ In most cases, you will not need to adjust these ports.
 There are some URLs that {productname} must be able to access to register clients and perform updates.
 In most cases, allowing access to these URLs is sufficient:
 
-* scc.suse.com
-* updates.suse.com
-* installer-updates.suse.com
-* registry.suse.com
+* [literal]``scc.suse.com``
+* [literal]``updates.suse.com``
+* [literal]``installer-updates.suse.com``
+* [literal]``registry.suse.com``
 
 You can find additional details on whitelisting the specified URLs and their associated IP addresses in this article: https://www.suse.com/support/kb/doc/?id=000021034[Accessing {scclongform} and SUSE registry behind a firewall and/or through a proxy].
 
