add sl micro and OpenSuse Leap Micro 6.1 support

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -50,13 +50,13 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 
-| {sle-micro}
+| {sle-micro} 
 | {check}
 | {cross}
 | {cross}
 | {check}
 
-| {sl-micro}
+| {sl-micro} {microversion}
 | {check}
 | {cross}
 | {cross}
