--- a/modules/client-configuration/pages/clients-slmicro.adoc
+++ b/modules/client-configuration/pages/clients-slmicro.adoc
@@ -24,9 +24,29 @@ include::snippets/arch-other-note.adoc[]
 
 The products you need for this procedure are:
 
-[[slmicro-channels-wizard]]
+
+[[slmicro-channels-wizard-61]]
 [cols="1,1", options="header"]
-.SL Micro Products - WebUI
+.{sl-micro} {microversion} Products - WebUI
+|===
+
+| OS Version
+| Product Name
+
+| {sl-micro} 6.1 {x86_64}
+| SUSE Linux Micro 6.1 x86_64
+
+| {sl-micro} 6.1 {arm64}
+| SUSE Linux Micro 6.1 arch64
+
+| {sl-micro} 6.1 {s390x}
+| SUSE Linux Micro 6.1 s390x
+
+|===
+
+[[slmicro-channels-wizard-60]]
+[cols="1,1", options="header"]
+.{sl-micro} 6.0 Products - WebUI
 |===
 
 | OS Version
@@ -49,9 +69,25 @@ include::snippets/addchannels_vendor_webui.adoc[]
 Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
-[[slmicro-channels-cli]]
+// 6.1 from command line
+[[slmicro-channels-cli-61]]
 [cols="1,1", options="header"]
-.SL Micro Products - CLI
+.{sle-micro} {microversion} Products - CLI
+|===
+
+| OS Version
+| Base Channel
+
+| {sl-micro} 6.1 {x86_64}
+| sl-micro-6.1-pool-x86_64
+
+|===
+
+
+// 6.0 from command line
+[[slmicro-channels-cli-60]]
+[cols="1,1", options="header"]
+.{sl-micro} 6.0 Products - CLI
 |===
 
 | OS Version
