--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -57,7 +57,7 @@ The operating system running on a client is supported by the organization that s
 | {cross}
 | {check}
 
-| {sl-micro}
+| {sl-micro} {microversion}, 6.0
 | {x86_64}, {aarch64}, {s390x}
 | {cross}
 | {check}
