--- a/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -62,7 +62,7 @@ ifeval::[{uyuni-content} == true]
 | OS Version               | {leapmicro} {microversion}     | {leapmicro} 5.5                    | {leapmicro} 5.4                | {leapmicro} 5.3
 | Base Channel             | opensuse_micro6_1              | opensuse_micro5_5                  | opensuse_micro5_4              | opensuse_micro5_3
 | Client Channel           | opensuse_micro6_1-uyuni-client | opensuse_micro5_5-uyuni-client     | opensuse_micro5_4-uyuni-client | opensuse_micro5_3-uyuni-client
-| SLE Updates Channel      | opensuse_micro6_1-sle-updates  | opensuse_micro5_5-sle-updates      | opensuse_micro5_4-sle-updates  | opensuse_micro5_3-sle-updates
+| SLE Updates Channel      | NA                             | opensuse_micro5_5-sle-updates      | opensuse_micro5_4-sle-updates  | opensuse_micro5_3-sle-updates
 
 |===
 
