--- a/modules/client-configuration/pages/clients-slmicro.adoc
+++ b/modules/client-configuration/pages/clients-slmicro.adoc
@@ -42,6 +42,9 @@ The products you need for this procedure are:
 | {sl-micro} 6.1 {s390x}
 | SUSE Linux Micro 6.1 s390x
 
+| {sl-micro} 6.1 {ppc64le}
+| SUSE Linux Micro 6.1 ppc64le
+
 |===
 
 [[slmicro-channels-wizard-60]]
