--- a/modules/client-configuration/pages/clients-slmicro.adoc
+++ b/modules/client-configuration/pages/clients-slmicro.adoc
@@ -75,7 +75,7 @@ The channels you need for this procedure are:
 // 6.1 from command line
 [[slmicro-channels-cli-61]]
 [cols="1,1", options="header"]
-.{sle-micro} {microversion} Products - CLI
+.{sl-micro} {microversion} Products - CLI
 |===
 
 | OS Version
