--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -56,7 +56,7 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
-| {sl-micro} {microversion}
+| {sl-micro} {microversion}, 6.0
 | {check}
 | {cross}
 | {cross}
