more generic (per feedback)

--- a/modules/administration/pages/auth-methods-pam.adoc
+++ b/modules/administration/pages/auth-methods-pam.adoc
@@ -26,15 +26,9 @@ mgrctl term
 
 . Inside the container, execute the following steps:
 +
-
-.. To set configuration options, open the file:
-+
-----
-/etc/sssd/sssd.conf
-----
-+
-.. Set [literal]``krb5_keytab`` in ``domain/$domain`` to [literal]``/etc/sssd/krb5.keytab``
-.. Exit the container:
+.. Edit [path]``/etc/sssd/sssd.conf`` according to your configuration.
+   For an example, see xref:administration:auth-methods-pam.adoc#auth-methods-pam[].
+.. When done, exit the container:
 +
 ----
 exit
@@ -62,6 +56,7 @@ For more information, see {sles-base-os-documentation}/part-auth.html.
 
 
 
+[[auth-methods-pam-ad]]
 === LDAP Integration with Active Directory Example
 
 For LDAP integration with Active Directory, you can use the following example.
