--- a/modules/administration/pages/auth-methods-pam.adoc
+++ b/modules/administration/pages/auth-methods-pam.adoc
@@ -27,7 +27,7 @@ mgrctl term
 . Inside the container, execute the following steps:
 +
 .. Edit [path]``/etc/sssd/sssd.conf`` according to your configuration.
-   For an example, see xref:administration:auth-methods-pam.adoc#auth-methods-pam[].
+   For an example, see xref:administration:auth-methods-pam.adoc#auth-methods-pam-ad[].
 .. When done, exit the container:
 +
 ----
