Add MAC based terminal naming

--- a/modules/retail/pages/retail-terminal-names.adoc
+++ b/modules/retail/pages/retail-terminal-names.adoc
@@ -3,7 +3,7 @@
 
 Terminals can be named according to certain parameters, which can make it easier to match the physical device with its record in the {productname} {webui}.
 
-Naming schemes available are ``Hostname``, ``FQDN``, and ``HWType``.
+Naming schemes available are ``Hostname``, ``FQDN``, ``HWType`` and ``MAC``.
 Naming scheme can be selected in the [guimenu]``Branch Network`` formula.
 For more information, see xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
 
@@ -89,7 +89,28 @@ The [systemitem]``FQDN`` is the fully qualified domain name of the terminal.
 The [systemitem]``UniqueID`` is the first four characters of a generated machine identification number.
 You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the salt client ID`` checkbox in the xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
 
+== Naming by ``MAC``
 
+Terminal names are derived from the network interface hardware address (MAC) and use this format:
+
+----
+BranchID.MAC-UniqueID
+----
+
+For example:
+
+----
+B0002.52:54:00:62:18:6f-cb83
+----
+
+The [systemitem]``BranchID`` is the unique identifier for the branch server that the terminal is connected to.
+You can configure this value in the xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[] settings for the branch server.
+You can disable this prefix by toggling the [systemitem]``Do not prefix salt client ID with Branch ID`` checkbox in the xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
+
+The [systemitem]``MAC`` is colon delimited hardware address of the network interface card used for booting of the terminal.
+
+The [systemitem]``UniqueID`` is the first four characters of a generated machine identification number.
+You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the salt client ID`` checkbox in the xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
 
 == Assign Hostnames to Terminals
 
