--- a/modules/retail/pages/retail-terminal-names.adoc
+++ b/modules/retail/pages/retail-terminal-names.adoc
@@ -3,7 +3,7 @@
 
 Terminals can be named according to certain parameters, which can make it easier to match the physical device with its record in the {productname} {webui}.
 
-Naming schemes available are ``Hostname``, ``FQDN``, ``HWType`` and ``MAC``.
+Naming schemes available are ``Hostname``, ``FQDN``, ``HWType``, and ``MAC``.
 Naming scheme can be selected in the [guimenu]``Branch Network`` formula.
 For more information, see xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
 
