replace outdated and obsolete content with a stub to provide an entry point for links. https://bugzilla.suse.com/show_bug.cgi?id=1235567 https://github.com/SUSE/spacewalk/issues/26181

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -27,6 +27,7 @@ ifeval::[{uyuni-content} == true]
 **** xref:container-deployment/uyuni/server-deployment-uyuni.adoc[Server Deployment on {leapmicro}]
 **** xref:container-deployment/uyuni/server-air-gapped-deployment-uyuni.adoc[Air-gapped Deployment]
 *** Proxy
+**** xref:install-proxy.adoc[Proxy Installation]
 **** xref:container-deployment/uyuni/proxy-container-setup-uyuni.adoc[Containerized {productname} Proxy Setup]
 **** xref:container-deployment/uyuni/proxy-deployment-uyuni.adoc[Proxy Deployment on {leapmicro}]
 **** xref:container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc[Proxy Deployment on K3s]
@@ -42,6 +43,7 @@ ifeval::[{suma-content} == true]
 **** xref:install-pubcloud.adoc[Public Cloud Deployment]
 
 *** Proxy
+**** xref:install-proxy.adoc[Proxy Installation]
 **** xref:container-deployment/suma/proxy-deployment-suma.adoc[{productname} Proxy Deployment on {sle-micro}]
 **** xref:container-deployment/suma/proxy-deployment-vm-suma.adoc[Proxy Deployment as Virtual Machine - KVM]
 **** xref:container-deployment/suma/proxy-deployment-vmdk-suma.adoc[Proxy Deployment Virtual Machine - VMware]
