--- a/modules/specialized-guides/pages/large-deployments/overview.adoc
+++ b/modules/specialized-guides/pages/large-deployments/overview.adoc
@@ -16,7 +16,7 @@ Both methods are described in this book.
 
 With large scale environments one should also consider the usage of {productname} Proxies.
 Sizing and location of the Proxies will dependent on the deployment topology.
-For more information see xref:installation-and-upgrade:install-proxy.adoc[].
+For more information, see xref:installation-and-upgrade:install-proxy.adoc[].
 
 Additionally, if you are operating within a Retail environment, you can use {productname} {smr} to manage large deployments of point-of-service terminals.
 There is an introduction to {productname} {smr} in this book.
