--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -1,5 +1,5 @@
 [[installation-proxy-containers]]
-= {productname} {productnumber} Proxy Deployment on {sle-micro}
+= {productname} Proxy Deployment on {sle-micro}
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -23,7 +23,7 @@ To successfully deploy, you will perform the following actions:
 . Review hardware requirements.
 . Synchronize the {sle-micro} {microversion} parent channel and the proxy extension child channel on the server.
 . Install {sle-micro} {microversion} on a bare-metal machine.
-. During the installation, register {sle-micro} {microversion} along with the {productname} {productnumber} Proxy extension.
+. During the installation, register {sle-micro} {microversion} along with the {productname} Proxy extension.
 . Create a {salt} activation key.
 . Bootstrap the proxy as a client with the [systemitem]``default`` connection method.
 . Generate a proxy configuration.
@@ -84,21 +84,21 @@ This table shows the hardware requirements for deploying {productname} Proxy.
 
 
 
-== Sync the Parent and Proxy Extension Child Channels
+== Synchronize the Parent and Proxy Extension Child Channels
 
 This section presumes that you have already entered your organization credentials under the menu:Admin[Setup Wizard -> Organization Credentials] in the server's {webui}.
 Products are listed on the menu:Admin[Setup Wizard -> Products] page.
 This channel must be fully synchronized on the server, with the child channel [systemitem]``Proxy`` as an extension option selected.
 
-.{productname} {productnumber} Channel Sync for Proxy
+.{productname} {productnumber} Channel Synchronize for Proxy
 image::setup-wizard.png[scaledwidth=80%]
 
-.Procedure: Synchronizing the Proxy Parent Channel and Proxy Extension
+.Procedure: Synchronizing the Parent Channel and Proxy Extension
 . In the {productname} {webui} select menu:Admin[Products].
 . From the products page enter {sle-micro} in the filter field.
 . Next use the drop-down to select the required architecture.
   For this example {x86_64}.
-. In the [systemitem]``Product Description`` field select the {sle-micro} {microversion} checkbox then use the drop-down to select the [systemitem]``{productname} Proxy Extension 5.0 x86_64 BETA`` extension.
+. In the [systemitem]``Product Description`` field select the {sle-micro} {microversion} checkbox then use the drop-down to select the [systemitem]``{productname} Proxy Extension 5.0 x86_64`` extension.
 . Click the btn:[Add products] button.
 . Wait for the synchronization to complete.
 
@@ -124,7 +124,7 @@ For detailed documentation on preparing your machines OS (virtual or physical), 
   Click the [systemitem]``checkbox`` to accept the license agreement.
 . Click [systemitem]``Next`` to continue.
 . Select your registration method.
-  For this example, we will register the server with {scclongform}.
+  For this example, we will register the proxy with {scclongform}.
 +
 
 .{productname} {productnumber} Proxy as an extension
@@ -144,7 +144,8 @@ The {productname} {productnumber} Proxy is registered as an extension. Therefore
 . Enter your {productname} {productnumber} Proxy extension registration code.
 . Click btn:[Next] to continue.
 . On the [systemitem]``NTP Configuration`` page click btn:[Next].
-. On the [systemitem]``Authentication for the System`` page enter a password for the root user. Click btn:[Next].
+. On the [systemitem]``Authentication for the System`` page enter a password for the root user.
+  Click btn:[Next].
 . On the [systemitem]``Installation Settings`` page click btn:[Install].
 
 This finalizes installation of {sle-micro} {microversion} and {productname} {productnumber} Proxy as an extension.
@@ -182,20 +183,20 @@ transactional-update pkg install mgrpxy mgrpxy-bash-completion
 === Configure Custom Persistent Storage
 
 This step is optional.
-However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool. 
+However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool.
 This tool simplifies creating the container storage and Squid cache volumes.
 
-Use the command in the following manner: 
+Use the command in the following manner:
 ----
 mgr-storage-proxy <storage-disk-device>
 ----
 
-For example: 
+For example:
 ----
 mgr-storage-proxy /dev/nvme1n1
 ----
 
-For more information, type: 
+For more information, type:
 ----
 mgr-storage-proxy --help
 ----
@@ -265,14 +266,14 @@ mgrpxy install podman config.tar.gz
 
 
 [[proxy-setup-containers-transfer-start]]
-== Start the {productname} {productnumber} Proxy
+== Start the {productname} Proxy
 
 Container can now be started with the [literal]`mgrpxy` command:
 
 [[proc-setup-containers-setup-start]]
 .Procedure: Starting and Checking Proxy Status
 
-. Start the Proxy by calling:
+. Start the proxy by calling:
 +
 ----
 mgrpxy start
@@ -319,7 +320,7 @@ To install them run:
 
 ----
 zypper in helm mgrpxy
----- 
+----
 ////
 
 
