Apply suggestions from code review

--- a/modules/retail/pages/retail-terminal-names.adoc
+++ b/modules/retail/pages/retail-terminal-names.adoc
@@ -3,7 +3,7 @@
 
 Terminals can be named according to certain parameters, which can make it easier to match the physical device with its record in the {productname} {webui}.
 
-Naming schemes available are ``Hostname``, ``FQDN``, ``HWType`` and ``MAC``.
+Naming schemes available are ``Hostname``, ``FQDN``, ``HWType``, and ``MAC``.
 Naming scheme and its configuration can be selected in the [guimenu]``Saltboot Group`` formula for containerized branch servers or in the [guimenu]``Branch Network`` formula for others.
 For more information, see xref:retail/containerized-saltboot.adoc[] and xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
 
@@ -35,7 +35,7 @@ If the terminal does not provide a serial number, it will be omitted from the te
 The [systemitem]``UniqueID`` is the first four characters of a generated machine identification number.
 Added unique ID is a requirement for successful terminal deployment.
 Without unique ID, subsequent terminal registration will fail.
-You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the salt client ID``
+You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the salt client ID``.
 
 
 
