Document not to generate RPM when creating new SSL certificates
The generated RPM is wrong and will soon be completely dropped. Document
not to generate it.

--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -26,7 +26,7 @@ If your existing certificates have expired or stopped working for any reason, yo
 rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 --set-state="STATE" --set-city="CITY" --set-org="ORGANIZATION" \
 --set-org-unit="ORGANIZATION UNIT" --set-email="name@example.com" \
---set-hostname="susemanager.example.com" --set-cname="example.com"
+--set-hostname="susemanager.example.com" --set-cname="example.com" --no-rpm
 ----
 Ensure that the [systemitem]``set-cname`` parameter is the fully qualified domain name of your {productname} Server.
 You can use the [systemitem]``set-cname`` parameter multiple times if you require multiple aliases.
@@ -34,6 +34,7 @@ You can use the [systemitem]``set-cname`` parameter multiple times if you requir
 The private key and the server certificate can be found in the directory `/root/ssl-build/susemanager/` as `server.key` and `server.crt`.
 The name of the last directory depends on the hostname used with `--set-hostname` option.
 
+Deploy the new certificate and key using the `mgr-ssl-cert-setup` tool as documented in xref:administration:ssl-certs-imported.adoc#ssl-certs-import-replace[].
 
 
 [[ssl-certs-selfsigned-create-replace]]
