cont. cleanup and new snippet: register

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -6,7 +6,6 @@ endif::[]
 
 
 This guide outlines the deployment process for the {productname} {productnumber} Proxy.
-This guide presumes you have already successfully deployed a {productname} {productnumber} Server.
 
 [IMPORTANT]
 ====
@@ -81,6 +80,9 @@ This table shows the hardware requirements for deploying {productname} Proxy.
 | Minimum 100 GB
 
 |===
+
+// FIXME: ^^^ should we better just mention
+//            /var/lib/containers/storage/volumes here above? ^^^
 
 
 
