--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -1,5 +1,5 @@
 [[proxy-install-vm]]
-= {productname} {productnumber} Proxy Deployment as a Virtual Machine - KVM
+= {productname} Proxy Deployment as a Virtual Machine - KVM
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -15,8 +15,8 @@ KVM will be combined with Virtual Machine Manager (_virt-manager_) as a sandbox 
 
 [IMPORTANT]
 ====
-The preferred method for deploying {productname} {productnumber} Proxy is to use one of the following available images.
-All tools are included in these images greatly simplifying deployment.
+The preferred method for deploying {productnumber} Proxy is to use one of the following available images.
+All tools are included in these images simplifying deployment.
 ====
 
 Images for {productname} {productnumber} Proxy are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
@@ -66,7 +66,7 @@ If you want to use a production environment and need background information abou
 | Installation Method | Import Existing Disk Image
 | OS:                 | Linux
 | Version:            | {productname}-Proxy.x86_64-5.0.0-Build16.12.qcow2
-| Memory:             | 2 GB
+| Memory:             | 2 GB (minimum)
 | CPU's:              | 2
 | Storage Format:     | _.qcow2_ 40 GB (Default) Root Partition
 | Name:               | test-setup
@@ -121,66 +121,7 @@ image::root-password.png[]
 
 
 
-== Register {sle-micro} and {productname} {productnumber} Proxy
-
-
-.Procedure: Registering {sle-micro} and {productname} {productnumber} Proxy
-. Boot the virtual machine.
-. Log in as `root`.
-. Register {sle-micro} with SCC.
-+
-
-----
-transactional-update register -r <REGCODE> -e <your_email>
-----
-
-. Reboot.
-
-. Register {productname} {productnumber} Proxy with {scclongform}.
-+
-
-----
-transactional-update register -p SUSE-Manager-Proxy/5.0/x86_64 -r <REGCODE>
-----
-
-. Reboot.
-
-. Update the system:
-+
-
-----
-transactional-update
-----
-
-. If updates were applied reboot.
-
-. This step is optional.
-  However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool.
-** For more information, see [command]``mgr-storage-proxy --help``.
-This tool simplifies creating the container volumes.
-
-** Use the command in the following manner:
-+
-
-----
-mgr-storage-proxy <storage-disk-device>
-----
-+
-For example:
-+
-----
-mgr-storage-proxy /dev/nvme1n1
-----
-+
-[NOTE]
-====
-This command will move the persistent storage volumes at [path]``/var/lib/containers/storage/volumes`` to the specified storage device.
-
-For more information, see
-
-* xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
-* xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
-====
+include::../register-proxy-suma.adoc[]
 
 
 
