--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
@@ -1,5 +1,5 @@
 [[proxy-install-vmware]]
-= {productname} {productnumber} Proxy Deployment as a Virtual Machine - VMware
+= {productname} Proxy Deployment as a Virtual Machine - VMware
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -15,7 +15,7 @@ VMware will be used as a sandbox for this installation.
 
 [IMPORTANT]
 ====
-The preferred method for deploying {productname} {productnumber} Proxy is to use one of the following available images.
+The preferred method for deploying {productname} Proxy is to use one of the following available images.
 All tools are included in these images greatly simplifying deployment.
 ====
 
@@ -76,68 +76,7 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 
 
-[[minimal.susemgrproxy.prep]]
-== Register {sle-micro} and {productname} {productnumber} Proxy
-
-// Before starting obtain your SUSE Manager Registration Code from SUSE Customer Center - https://scc.suse.com.
-
-.Procedure: Registering {sle-micro} and {productname} {productnumber} Proxy
-. Boot the virtual machine.
-. Log in as `root`.
-. Register {sle-micro} with SCC.
-+
-
-----
-transactional-update register -r <REGCODE> -e <your_email>
-----
-
-. Reboot.
-
-. Register {productname} {productnumber} Proxy with {scclongform}.
-+
-
-----
-transactional-update register -p SUSE-Manager-Proxy/5.0/x86_64 -r <REGCODE>
-----
-
-. Reboot.
-
-. Update the system:
-+
-
-----
-transactional-update
-----
-
-. If updates were applied reboot.
-
-. This step is optional.
-  However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool.
-** For more information, see [command]``mgr-storage-proxy --help``.
-This tool simplifies creating the container volumes.
-
-** Use the command in the following manner:
-+
-
-----
-mgr-storage-proxy <storage-disk-device>
-----
-+
-For example:
-+
-----
-mgr-storage-proxy /dev/nvme1n1
-----
-+
-[NOTE]
-====
-This command will move the persistent storage volumes at [path]``/var/lib/containers/storage/volumes`` to the specified storage device.
-
-For more information, see
-
-* xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
-* xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
-====
+include::../register-proxy-suma.adoc[]
 
 
 
