--- a/modules/installation-and-upgrade/pages/install-proxy.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy.adoc
@@ -3,4 +3,5 @@
 
 // **This file is needed to link generically to proxy installation**
 
-There are various ways to deploy a {productname} Proxy.
+There are various scenarios to deploy a {productname} Proxy.
+All these scenarios presumes you have already successfully deployed a {productname} {productnumber} Server.
